--- a/en/pictures-of-miki/_posts/2015-07-13-00049.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00049.md
@@ -2,15 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/fIq3PBJSxs5AtVITqb8XJHMPBv4jufSAM0_i_Fzh0Ms=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABMmYPv1MHwr_qP6q1lbocza/mikin-kuvat/2/DSC29267-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/KOVEBHa8Z91ZIAu8FDju1sItPpDExJKmDy9kOX9ErBY=w800)](https://lh3.googleusercontent.com/KOVEBHa8Z91ZIAu8FDju1sItPpDExJKmDy9kOX9ErBY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC9Oi00dOI7uG9XKOvy7Yk9a/mikin-kuvat/2/DSC29267-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAtvIaiBIkGxp84fl4dR_qfa/mikin-kuvat/2/DSC29267.JPG)
 
-[![](https://lh3.googleusercontent.com/6iIlYPtk5_IUS_xpHsC6EG1nPjtAPgYvvsClGJLOEA=w800)](https://lh3.googleusercontent.com/6iIlYPtk5_IUS_xpHsC6EG1nPjtAPgYvvsClGJLOEA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABXyGou4eXpik9ez1imuZPna/mikin-kuvat/2/DSC29249-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA75Sj9AqBw5eQEQ3HzssC6a/mikin-kuvat/2/DSC29249.JPG)
 
-[![](https://lh3.googleusercontent.com/k5HBAzOV5pAW8mM2_rURgej_QTy4RylEdfhEf6v05w=w800)](https://lh3.googleusercontent.com/k5HBAzOV5pAW8mM2_rURgej_QTy4RylEdfhEf6v05w=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACPWtH3O0reMN3anU3cfMESa/mikin-kuvat/2/DSC29242-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACFQP1nb9DRl50DCII3V1Mfa/mikin-kuvat/2/DSC29242.JPG)
 
-[![](https://lh3.googleusercontent.com/5xEDifHw9ue4OWBB7bCy5eawUcrsLeMhFWYB4ltdqH8=w800)](https://lh3.googleusercontent.com/5xEDifHw9ue4OWBB7bCy5eawUcrsLeMhFWYB4ltdqH8=s0)
-
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAxcmw42KyTsbNf_uGl0O8ha/mikin-kuvat/2/DSC29244-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACDWzcA1DRCi16V8sILZBYTa/mikin-kuvat/2/DSC29244.jpg)
