--- a/en/pictures-of-miki/_posts/2015-07-13-00052.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00052.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/gperGb1ShKE0V5xcXgRIv2nyahygUoTNfc0Upqt5lEU=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABmKLHAyW6WS7pKa89-QZO9a/mikin-kuvat/1/DSC30282-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/6LGnIFcmdzzcB6pEOO3w29oBJoNCNEUUJSVV29ultT0=w800)](https://lh3.googleusercontent.com/6LGnIFcmdzzcB6pEOO3w29oBJoNCNEUUJSVV29ultT0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAClxPKTU4nQh5hHnSaHdxEja/mikin-kuvat/1/DSC30333-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB2hBLdjqy7VQYshs9hryWDa/mikin-kuvat/1/DSC30333.JPG)
 
-[![](https://lh3.googleusercontent.com/4PoB_Q-I7yOj6U4LFXaFw1ndpAi7EUIY8AL8p1wXwN0=w800)](https://lh3.googleusercontent.com/4PoB_Q-I7yOj6U4LFXaFw1ndpAi7EUIY8AL8p1wXwN0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABKCQ1xsWi2tLcCGljnBNLZa/mikin-kuvat/1/DSC30289-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAs76GYx8sK4mLfFAzKVP2va/mikin-kuvat/1/DSC30289.JPG)
 
-[![](https://lh3.googleusercontent.com/bQl_GyxIRrTxrELNNNkjubF8d22P07TXs_W7_AwVHAg=w800)](https://lh3.googleusercontent.com/bQl_GyxIRrTxrELNNNkjubF8d22P07TXs_W7_AwVHAg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABGcNV33e3CRqTnxzfIcmhra/mikin-kuvat/1/DSC30282-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA66oDzDK5UFm3LhT05n7J3a/mikin-kuvat/1/DSC30282.JPG)
