--- a/kuvia-mikista/_posts/2015-07-13-00036.md
+++ b/kuvia-mikista/_posts/2015-07-13-00036.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/3o272aBNRpW-kZsIKtrosnme7B2ByV8WxYSWn8vv--w=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABkfnJwqiAUoAJCGpXLYF80a/mikin-kuvat/1/DSC19462-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/o4_GXPiuIjMzHE3I5FpML-rJZOeT-Tv7LAvHRG3I3Lg=w800)](https://lh3.googleusercontent.com/o4_GXPiuIjMzHE3I5FpML-rJZOeT-Tv7LAvHRG3I3Lg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACZLWx0SjPyKKITn-0B2B3Ta/mikin-kuvat/1/DSC19462-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC4ojU_0j0x2NgFPjqrUSFMa/mikin-kuvat/1/DSC19462.JPG)
