--- a/kuvia-mikista/_posts/2015-07-13-00039.md
+++ b/kuvia-mikista/_posts/2015-07-13-00039.md
@@ -2,16 +2,20 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/3QDXl1bxWOO52nnBZV776gmep-SIvPURRwsLNX-saug=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACdnlWtk9CTZIDdYs3G7F9da/mikin-kuvat/1/DSC23081-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/o_Gx5ENEbF-o0r4jlchGuY7KZzOMBLo0Dbmff_GkNxc=w800)](https://lh3.googleusercontent.com/o_Gx5ENEbF-o0r4jlchGuY7KZzOMBLo0Dbmff_GkNxc=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACIgb4Sj88_95kRq9M_GIY3a/mikin-kuvat/1/DSC22961-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB9jxbCy-TUhk7ZH24WMHZ2a/mikin-kuvat/1/DSC22961.JPG)
 
-[![](https://lh3.googleusercontent.com/TbN_9bn-Vg3MR4mpdRxFUJEAl9f0ReUxBtoOtF_1BHE=w800)](https://lh3.googleusercontent.com/TbN_9bn-Vg3MR4mpdRxFUJEAl9f0ReUxBtoOtF_1BHE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAbWxJk6Wc8kDh_xLygcMMja/mikin-kuvat/1/DSC22980-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABPIOuL-FYBWKb3dTFD-omca/mikin-kuvat/1/DSC22980.JPG)
 
-[![](https://lh3.googleusercontent.com/f5UBMIBrDL_4LqeVIumYgqRl_HNmF-nQKsogbD4S2PU=w800)](https://lh3.googleusercontent.com/f5UBMIBrDL_4LqeVIumYgqRl_HNmF-nQKsogbD4S2PU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABcppNuRT6RGss9dnXWDi4Ea/mikin-kuvat/1/DSC22987-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACFeQ8pnSIXND4SnU3vaKcEa/mikin-kuvat/1/DSC22987.JPG)
 
-[![](https://lh3.googleusercontent.com/RwZQUHtLfJLpiJmthzcnBzNvPnRvJ5AFVHqcilSWKrE=w800)](https://lh3.googleusercontent.com/RwZQUHtLfJLpiJmthzcnBzNvPnRvJ5AFVHqcilSWKrE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC7RrHJ07VI1PqD7SVBYhT5a/mikin-kuvat/1/DSC23030-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAGBdbp-WOmhTT3AlXtKldMa/mikin-kuvat/1/DSC23030.JPG)
 
-[![](https://lh3.googleusercontent.com/9QcwpFbKWefK0rAxNqX96Jqc-7Sbg2-PqH_a2Ew6CpI=w800)](https://lh3.googleusercontent.com/9QcwpFbKWefK0rAxNqX96Jqc-7Sbg2-PqH_a2Ew6CpI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABs7D257FiA7kJmuhFHpK9ta/mikin-kuvat/1/DSC23031-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABHL5ZNOKGKaLRWHtaO0wW3a/mikin-kuvat/1/DSC23031.JPG)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABgFixFexcvmYazB9zAbuNka/mikin-kuvat/1/DSC22957-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACo0A9sfSxjUx1aEkGAS_46a/mikin-kuvat/1/DSC22957.JPG)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB1SzoFlE_KNZIRrzP38OKxa/mikin-kuvat/1/DSC23081-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADqF1WEmQopkUkdHLlwRJ1Ia/mikin-kuvat/1/DSC23081.JPG)
