--- a/kuvia-mikista/_posts/2015-07-13-00048.md
+++ b/kuvia-mikista/_posts/2015-07-13-00048.md
@@ -2,14 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/3qitKrd22mbijEzzMVrkr--CzeS3BryQ8HDp-O8RhSQ=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAJZydh6HE_m0D0af72PtWna/mikin-kuvat/1/DSC27282-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/w75uxDgSl9VpDWSbR4NPRGVxqCEOdeAAk108-kX9Vg=w800)](https://lh3.googleusercontent.com/w75uxDgSl9VpDWSbR4NPRGVxqCEOdeAAk108-kX9Vg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABJTBzG-TfDtJSNBjNKMo5Wa/mikin-kuvat/1/DSC27233-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADMQw_opOnBTuityGh0ywXQa/mikin-kuvat/1/DSC27233.JPG)
 
-[![](https://lh3.googleusercontent.com/LVaOYq4ETi6e3VQGuwvX7LTcs8FxxWQe7tIK6JQo2w=w800)](https://lh3.googleusercontent.com/LVaOYq4ETi6e3VQGuwvX7LTcs8FxxWQe7tIK6JQo2w=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACoDwxE-sz0k6jpTxGzD__8a/mikin-kuvat/1/DSC27270-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABZnIveOy1ZZBUPM9YK9kr3a/mikin-kuvat/1/DSC27270.JPG)
 
-[![](https://lh3.googleusercontent.com/Ghfb1oiKIO-8Qb6oMyvL-obvn8HNZMT-Wty3MyOYEQ=w800)](https://lh3.googleusercontent.com/Ghfb1oiKIO-8Qb6oMyvL-obvn8HNZMT-Wty3MyOYEQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADL-Krsc7zi7-vx7vAaZIgsa/mikin-kuvat/1/DSC27282-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACHX-F5OP6P2cSOBbxAqsO3a/mikin-kuvat/1/DSC27282.JPG)
 
 [![](https://lh3.googleusercontent.com/ZZS2ww7TxkmDSAwhHSYmPJN3-cP1C7UYbhyYAFSxDis=w800)](https://lh3.googleusercontent.com/ZZS2ww7TxkmDSAwhHSYmPJN3-cP1C7UYbhyYAFSxDis=s0)
