--- a/kuvia-mikista/_posts/2015-07-13-00051.md
+++ b/kuvia-mikista/_posts/2015-07-13-00051.md
@@ -2,16 +2,16 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/NwoEadbxY11lCtn8esH8S5DAeG7ye1VtxIUyXrpaxPY=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABKX4Nk80_Zpk_vAHi9lZTYa/mikin-kuvat/1/DSC29501-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/GQVolTQkYeWXaPObUhjaeUf0-IAAs7TIoDf8alpEHQ=w800)](https://lh3.googleusercontent.com/GQVolTQkYeWXaPObUhjaeUf0-IAAs7TIoDf8alpEHQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAejO2BWdui7Zah8YijeU6ya/mikin-kuvat/1/DSC29501-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAG02opckkUIWIvgmaABRYPa/mikin-kuvat/1/DSC29501.JPG)
 
-[![](https://lh3.googleusercontent.com/6K9MhbXVZsCsVpcdg78E6ORcDJWhnG9le9s7DM3buw=w800)](https://lh3.googleusercontent.com/6K9MhbXVZsCsVpcdg78E6ORcDJWhnG9le9s7DM3buw=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACCIpY4WcwJBtCUaqjJUko9a/mikin-kuvat/1/DSC29502-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADZD9Tkt9fcwHNCmdakA-_Pa/mikin-kuvat/1/DSC29502.JPG)
 
-[![](https://lh3.googleusercontent.com/QYpHLv8IIsVtnYPlvgzhMsKlxCAIDrb3tQeaAlEsFA=w800)](https://lh3.googleusercontent.com/QYpHLv8IIsVtnYPlvgzhMsKlxCAIDrb3tQeaAlEsFA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACyAcuSe6U-iFiBVhBSfmsga/mikin-kuvat/1/DSC29498-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACuC0Wyhg_gh-96x5NzIU93a/mikin-kuvat/1/DSC29498.JPG)
 
-[![](https://lh3.googleusercontent.com/TLXg9e0mpSnLBbmAJjTe12J9Yppw4791886XypVTlg=w800)](https://lh3.googleusercontent.com/TLXg9e0mpSnLBbmAJjTe12J9Yppw4791886XypVTlg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADalOIM-j6uwHhGBvoNxJ26a/mikin-kuvat/1/DSC29513-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABtTOn-PpZ_i1Tk8Q3q8gKza/mikin-kuvat/1/DSC29513.JPG)
 
-[![](https://lh3.googleusercontent.com/X81_oCcfhFJWqh0SQgTy6hN7XkQbEOf9qGQBRGVdSBk=w800)](https://lh3.googleusercontent.com/X81_oCcfhFJWqh0SQgTy6hN7XkQbEOf9qGQBRGVdSBk=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADRiuUbFa-yYVoKYl1HJviNa/mikin-kuvat/1/DSC09041-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD2U7F2OOzyqo0WOfIU9CDwa/mikin-kuvat/1/DSC09041.JPG)
