--- a/kuvia-mikista/_posts/2015-07-13-00053.md
+++ b/kuvia-mikista/_posts/2015-07-13-00053.md
@@ -2,18 +2,18 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/IVCgAPLXtpTLM2_Xrs9ci23G5rEqToCwhEQsyeG2lAo=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACqBZVS-lMQgaQ7ThQC6IC8a/mikin-kuvat/1/DSC31982_-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/aUVVIocKvA6vgkkUUDjhjbuP0H_nr0qsAH4oSdkRe5s=w800)](https://lh3.googleusercontent.com/aUVVIocKvA6vgkkUUDjhjbuP0H_nr0qsAH4oSdkRe5s=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADz61FHf-DWBea4nmFwTu1la/mikin-kuvat/1/DSC31981-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA0Hm-lZW39S3oy_sb_tWRga/mikin-kuvat/1/DSC31981.JPG)
 
-[![](https://lh3.googleusercontent.com/3ayZasA4wQ_EOPrVPzifAe8wHWoqJzQpwYp1AYIsMOQ=w800)](https://lh3.googleusercontent.com/3ayZasA4wQ_EOPrVPzifAe8wHWoqJzQpwYp1AYIsMOQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACWiVRGxz1GteKIj8r-_uLLa/mikin-kuvat/1/DSC32001-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABBhtGKKXg2v12LoB6fTtc8a/mikin-kuvat/1/DSC32001.JPG)
 
-[![](https://lh3.googleusercontent.com/gACcE0Q8rG591NbVIYzi8PHdut465qVmiGktY2MEFVQ=w800)](https://lh3.googleusercontent.com/gACcE0Q8rG591NbVIYzi8PHdut465qVmiGktY2MEFVQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC9pZp8zlHVTy8lsWB0HSQOa/mikin-kuvat/1/DSC32002-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADGh1wul5LAxubmLFvzQ3Era/mikin-kuvat/1/DSC32002.JPG)
 
-[![](https://lh3.googleusercontent.com/ATfbgMvAu0BD6k8ucf-hTuzMdEUc3lbH__MrYuiqhmg=w800)](https://lh3.googleusercontent.com/ATfbgMvAu0BD6k8ucf-hTuzMdEUc3lbH__MrYuiqhmg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAv8mmXSRA6yEN4xSZ9JbFGa/mikin-kuvat/1/DSC32005-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADKi-PKyQm64lkbHopTy6Psa/mikin-kuvat/1/DSC32005.JPG)
 
-[![](https://lh3.googleusercontent.com/rX5XMCkuVA_XYcsCqKHmaWfcFJB-lvqplaFIHFRKHY0=w800)](https://lh3.googleusercontent.com/rX5XMCkuVA_XYcsCqKHmaWfcFJB-lvqplaFIHFRKHY0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADg07y7MxlXi6HR78NWSdELa/mikin-kuvat/1/DSC31962-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACGfy2H95mjhzvchCrTWIxZa/mikin-kuvat/1/DSC31962.JPG)
 
-[![](https://lh3.googleusercontent.com/wJv0_dPNjsmtY1_jL5avzITVuqMw_nS7-N9GY944f3Y=w800)](https://lh3.googleusercontent.com/wJv0_dPNjsmtY1_jL5avzITVuqMw_nS7-N9GY944f3Y=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABLNztxTvWGeCVLBDtsYZwFa/mikin-kuvat/1/DSC31982-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA_XIRXKM6B8QeyluG6d3lia/mikin-kuvat/1/DSC31982.JPG)
