--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00114.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00114.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/cherries).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD_H5aLGgFvVDZxuzNmUdo1a/luontokuvat/kes%C3%A4/8/DS34113-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADaTcQPToalrRca5iRDpjXDa/luontokuvat/kes%C3%A4/8/DS34113.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAALYqzSmykt9wMpQQi_6MOPa/luontokuvat/kes%C3%A4/8/DS34079-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACwfbNkVPeQ95pNIEcXVqIua/luontokuvat/kes%C3%A4/8/DS34079.jpg)
