--- a/luontokuvat/kesa/_posts/2015-07-14-00115.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00115.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/cherries) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABQkiAlob3GB-kGwlN6fWGza/luontokuvat/kes%C3%A4/8/DS34115-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAgx_n1LhOXPdwYtWvrJYNca/luontokuvat/kes%C3%A4/8/DS34115.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACappNe7E1xDN0a-IRDN7s9a/luontokuvat/kes%C3%A4/8/DS34117-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABAfZuW7RD1AbojcyKZ8wmva/luontokuvat/kes%C3%A4/8/DS34117.jpg)
