--- a/luontokuvat/kesa/_posts/2015-07-14-00114.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00114.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/cherries) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD_H5aLGgFvVDZxuzNmUdo1a/luontokuvat/kes%C3%A4/8/DS34113-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADaTcQPToalrRca5iRDpjXDa/luontokuvat/kes%C3%A4/8/DS34113.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAALYqzSmykt9wMpQQi_6MOPa/luontokuvat/kes%C3%A4/8/DS34079-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACwfbNkVPeQ95pNIEcXVqIua/luontokuvat/kes%C3%A4/8/DS34079.jpg)
