--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00061.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00061.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy this photo in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/ladybug).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABAul0T1m_Gnk08Jt7Zx55Fa/luontokuvat/kes%C3%A4/6/DS27187-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA83fEtWzC8WsbsKuPCVHPGa/luontokuvat/kes%C3%A4/6/DS27187.jpg)
 
 *Ladybug*
