--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00105.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00105.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/ladybug).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAByIZSqSqmN837jZpovzMECa/luontokuvat/kes%C3%A4/7/DS28081-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAylri8WYnjfIDR1kxDsnzXa/luontokuvat/kes%C3%A4/7/DS28081.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACggO6ECLW8TYO1Xyv7Hro0a/luontokuvat/kes%C3%A4/7/DS28082-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADoKYk67FuPhgMvu8xlINdca/luontokuvat/kes%C3%A4/7/DS28082.jpg)
