--- a/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00035.md
+++ b/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00035.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/hepatica-flowers).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACwlQjQL2MBX3fj8CxVtXdva/luontokuvat/kev%C3%A4t/DS14226-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACgfA-QkWSF3eLZproLrRYca/luontokuvat/kev%C3%A4t/DS14226.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACH0y2_5WYFfbC5srmY7tA0a/luontokuvat/kev%C3%A4t/DS14246-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADDRQnxSWrK9aADVw4thFb1a/luontokuvat/kev%C3%A4t/DS14246.jpg)
