--- a/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00040.md
+++ b/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00040.md
@@ -6,6 +6,8 @@ image:
 thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/hepatica-flowers).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADzAYDJcw9OabeN6SQ9MOH8a/luontokuvat/kev%C3%A4t/DSC60926-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD6fO8Hc3rAq1OCHwgO-Rgba/luontokuvat/kev%C3%A4t/DSC60926.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABK2i1KiDozOc8QFZNKSULza/luontokuvat/kev%C3%A4t/DSC60928-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAXTx7CvL6apOv3BlfFNKu6a/luontokuvat/kev%C3%A4t/DSC60928.jpg)
