--- a/luontokuvat/kesa/_posts/2015-07-14-00102.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00102.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACmfxue-2tE28tYctgQCS7xa/luontokuvat/kes%C3%A4/6/DS26284-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABceyNpqWKXpSUVqWO03KBka/luontokuvat/kes%C3%A4/6/DS26284.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADXnW5BY7AeBzXr6fOK1Pi4a/luontokuvat/kes%C3%A4/6/DS26294-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABUy1TyhMkzR7zIyhTtTRn2a/luontokuvat/kes%C3%A4/6/DS26294.jpg)
