--- a/luontokuvat/kesa/_posts/2015-07-14-00118.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00118.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADtO795-iEqtq2PpDd92sXsa/luontokuvat/kes%C3%A4/9/DS44962-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAUppm-9yPUVVOt7aQFDFKIa/luontokuvat/kes%C3%A4/9/DS44962.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA1NdSPLsUfaP_V68KbhfYea/luontokuvat/kes%C3%A4/9/DS44963-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD5sW03PTXVSRxIkIr3P52Va/luontokuvat/kes%C3%A4/9/DS44963.jpg)
