--- a/luontokuvat/kesa/_posts/2015-07-14-00119.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00119.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABD8fmH5sMLhR-MYymtCJsva/luontokuvat/kes%C3%A4/9/DS44926-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAAjV_FHAS72I6IjsmWjhP7a/luontokuvat/kes%C3%A4/9/DS44926.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD1fPsPHht7-CfJ43J10tb_a/luontokuvat/kes%C3%A4/9/DS44933-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABxzjaTbg6nqL1e2TsGCz8fa/luontokuvat/kes%C3%A4/9/DS44933.jpg)
