--- a/luontokuvat/kevat/_posts/2015-07-14-00040.md
+++ b/luontokuvat/kevat/_posts/2015-07-14-00040.md
@@ -3,7 +3,10 @@ layout: page
 image:
   feature:
   teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADl34J218FwOhkJj9xMpNU-a/luontokuvat/kev%C3%A4t/DSC60965-245px.jpg
+  thumb:
 ---
+
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/hepatica-flowers) sivustolta.*
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADzAYDJcw9OabeN6SQ9MOH8a/luontokuvat/kev%C3%A4t/DSC60926-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD6fO8Hc3rAq1OCHwgO-Rgba/luontokuvat/kev%C3%A4t/DSC60926.jpg)
 
