--- a/luontokuvat/kevat/_posts/2015-07-14-00041.md
+++ b/luontokuvat/kevat/_posts/2015-07-14-00041.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/hepatica-flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB-ePzIly8wo910yY9An49oa/luontokuvat/kev%C3%A4t/DS15081-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAALvMT29Nhdt5GzTzB3CxlRa/luontokuvat/kev%C3%A4t/DS15081.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA2U5f8H_OVYlpwjwc8mizSa/luontokuvat/kev%C3%A4t/DS15086-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAkIwx-EUecUDNsE_d52ekna/luontokuvat/kev%C3%A4t/DS15086.jpg)
