--- a/luontokuvat/kevat/_posts/2015-07-14-00044.md
+++ b/luontokuvat/kevat/_posts/2015-07-14-00044.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/hepatica-flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABM4rvkBsPVwTofUbVRMaEea/luontokuvat/kev%C3%A4t/DS15811-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACsH875TWO8IsoAqoVHZa-_a/luontokuvat/kev%C3%A4t/DS15811.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADkTsiwIwhcWr1htqcDv3joa/luontokuvat/kev%C3%A4t/DS15813-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAE3sdGDe01tWYj_XzJpDzia/luontokuvat/kev%C3%A4t/DS15813.jpg)
