--- a/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00045.md
+++ b/en/pictures-of-finnish-nature/spring/_posts/2015-07-14-00045.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/hepatica-flowers).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACTBCU7jiTo9LfU9f2nwLXua/luontokuvat/kev%C3%A4t/DS15852-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB5MzwyUpd0cIa2lJZG194Na/luontokuvat/kev%C3%A4t/DS15852.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB8A7jwn9Rvjlvl0L85S0bEa/luontokuvat/kev%C3%A4t/DS15854-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAWpZcvhDZ9d9Rfl6JoMw_Oa/luontokuvat/kev%C3%A4t/DS15854.jpg)
