--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00122.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00122.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/flowers).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABYZP0T5rjAMEOZMyXdgqzxa/luontokuvat/kes%C3%A4/9/DS36555-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABDKiEI0ZxTHf-sy2pGEH9ka/luontokuvat/kes%C3%A4/9/DS36555.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAW67DINohGMpyJAFUF_QyJa/luontokuvat/kes%C3%A4/9/DS36565-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABHiQZXQFutq_YBqhL8SOy2a/luontokuvat/kes%C3%A4/9/DS36565.jpg)
