--- a/luontokuvat/kevat/_posts/2015-07-14-00031.md
+++ b/luontokuvat/kevat/_posts/2015-07-14-00031.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/hepatica-flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB4Ig8HCwT33ZlWPk430wpca/luontokuvat/kev%C3%A4t/DSC60908-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADE4q3LMM-Zf-en4w4ivl-Ca/luontokuvat/kev%C3%A4t/DSC60908.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABEIH_DrxRdsyjGe_HCXwmQa/luontokuvat/kev%C3%A4t/DSC60920-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABFSkrFkQmYaBne2bRMun7Oa/luontokuvat/kev%C3%A4t/DSC60920.jpg)
