--- a/luontokuvat/kevat/_posts/2015-07-14-00043.md
+++ b/luontokuvat/kevat/_posts/2015-07-14-00043.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/hepatica-flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAa0s2fj24DnIxGMSPUUzzQa/luontokuvat/kev%C3%A4t/DS15770-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAtvDOneU9DZoiwxG9uEFQ2a/luontokuvat/kev%C3%A4t/DS15770.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACFfcEo3dTFrcc6PFcDNlXpa/luontokuvat/kev%C3%A4t/DS15779-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADyr9YMfb5dKPgkXk_a1ZR9a/luontokuvat/kev%C3%A4t/DS15779.jpg)
