--- a/luontokuvat/syksy/_posts/2015-07-14-00081.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00081.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADOIjCnQ3jhvgYpWJYGRDAla/luontokuvat/syksy/2/DS36047-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAd-QTVnQ4YiE02BhrgZSbPa/luontokuvat/syksy/2/DS36047.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACDcTMCOH6TAGv-h6kWvWnDa/luontokuvat/syksy/2/DS36002-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA67IA_1cNilVHJyA2SRbj3a/luontokuvat/syksy/2/DS36002.jpg)
