--- a/luontokuvat/syksy/_posts/2015-07-14-00082.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00082.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACLX64o0rYwRUflYpY3IcSWa/luontokuvat/syksy/3/DS37921-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADBlBezv9CLnyQXJlbauoiGa/luontokuvat/syksy/3/DS37921.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADc3XZG-dSH0-D-akr4jNkCa/luontokuvat/syksy/3/DS37923-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAPex4v3M8le4c8foZM2x_wa/luontokuvat/syksy/3/DS37923.jpg)
