--- a/luontokuvat/kesa/_posts/2015-07-14-00007.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00007.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/daisies) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAArniIKoorzFvsNIlLBeYExa/luontokuvat/kes%C3%A4/5/DSC10034-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD-tkC-n5g72zYXN3nqZuEKa/luontokuvat/kes%C3%A4/5/DSC10034.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAYefc4tZaxIqOQ8rq0Kpcxa/luontokuvat/kes%C3%A4/5/DSC10037-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAADWwJp2sohutrLUWMNPlF_a/luontokuvat/kes%C3%A4/5/DSC10037.jpg)
