--- a/luontokuvat/kesa/_posts/2015-07-14-00019.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00019.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/daisies) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA4ljJkCB3S0_8VCiSfYt0ja/luontokuvat/kes%C3%A4/2/DSC27843-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACVc311Yr40vN3uF3WnuQSba/luontokuvat/kes%C3%A4/2/DSC27843.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD5pdenO1I0Co6BSGuz8AGna/luontokuvat/kes%C3%A4/2/DSC27846-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAQ53Fy6yFEaHZXp8hglp0Za/luontokuvat/kes%C3%A4/2/DSC27846.jpg)
