--- a/luontokuvat/kesa/_posts/2015-07-14-00048.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00048.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/daisies) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABNj3FHNI8sBwG_peQMAq39a/luontokuvat/kes%C3%A4/2/DSC33244-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC4xPTd5Vv3-2h6WjP-Zq4Xa/luontokuvat/kes%C3%A4/2/DSC33244.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAV69zqTbb8YLEQNn7tCiU4a/luontokuvat/kes%C3%A4/2/DSC33249-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADJvKJGH0K1ATEU8Viq639Ka/luontokuvat/kes%C3%A4/2/DSC33249.jpg)
