--- a/luontokuvat/kesa/_posts/2015-07-14-00085.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00085.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/starworts) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABkEaJ-akVvrULlhBPQvHNoa/luontokuvat/kes%C3%A4/5/DS22697-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAGnKkO7L4hFwPDrzq3Vv2Ka/luontokuvat/kes%C3%A4/5/DS22697.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACV4s8SvGumiyyoruiOJFwEa/luontokuvat/kes%C3%A4/5/DS22698-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACmq2wBWFfO6kpWWVQ27k46a/luontokuvat/kes%C3%A4/5/DS22698.jpg)
