--- a/luontokuvat/kesa/_posts/2015-07-14-00107.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00107.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/roses) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABrxNlftbnBFccnG1gWdeIja/luontokuvat/kes%C3%A4/7/DS29849-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADCD4LHUyuF_K_EIataInkya/luontokuvat/kes%C3%A4/7/DS29849.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACMMioRhzQUkVatTPxwWhs_a/luontokuvat/kes%C3%A4/7/DS29851-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABLJe1WyahwSVYD7lzylJuKa/luontokuvat/kes%C3%A4/7/DS29851.jpg)
