--- a/luontokuvat/kesa/_posts/2015-07-14-00116.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00116.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/starworts) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAHJV0_6pFJu_8dbKz4xiJ9a/luontokuvat/kes%C3%A4/9/DS34632-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADyt9GwZaBi9i9YN616FTAsa/luontokuvat/kes%C3%A4/9/DS34632.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAoHPNDQrhIXi1rGubzAbSPa/luontokuvat/kes%C3%A4/9/DS34630-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABH3MeeVZ5lrjFhORf7B1kua/luontokuvat/kes%C3%A4/9/DS34630.jpg)
