--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00022.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00022.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/daisies).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACjitlMjwKE1bvyVYM0gzUQa/luontokuvat/kes%C3%A4/2/DSC28575-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADolwwTU_lzwCIZveA_YlWCa/luontokuvat/kes%C3%A4/2/DSC28575.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAl61Da9Ckn60DT0Pa8Edwba/luontokuvat/kes%C3%A4/2/DSC28590-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC9Ciair2KVwpYcA6Ke4MsPa/luontokuvat/kes%C3%A4/2/DSC28590.jpg)
