--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00071.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00071.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/starworts).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD9yKsseONnEPV1jrT4vs9sa/luontokuvat/kes%C3%A4/3/DS19272-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAUCc66gxskJ-XwISoaUTKQa/luontokuvat/kes%C3%A4/3/DS19272.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACaCqC8N2buj-woyqi6DgaEa/luontokuvat/kes%C3%A4/3/DS19279-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABhBohUYg80nB_2mWfu_ldda/luontokuvat/kes%C3%A4/3/DS19279.jpg)
