--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00106.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00106.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/roses).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADzih6t7tegScg450Xs4Bbma/luontokuvat/kes%C3%A4/7/DS29340-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACdRSYQ_c_qvFDVbEamMAvCa/luontokuvat/kes%C3%A4/7/DS29340.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACC1qhwr_soR2TJy3hFHGeYa/luontokuvat/kes%C3%A4/7/DS29405-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACkhdOq8mZzxZzrBsFA6JwVa/luontokuvat/kes%C3%A4/7/DS29405.jpg)
