--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00107.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00107.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/roses).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABrxNlftbnBFccnG1gWdeIja/luontokuvat/kes%C3%A4/7/DS29849-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADCD4LHUyuF_K_EIataInkya/luontokuvat/kes%C3%A4/7/DS29849.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACMMioRhzQUkVatTPxwWhs_a/luontokuvat/kes%C3%A4/7/DS29851-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABLJe1WyahwSVYD7lzylJuKa/luontokuvat/kes%C3%A4/7/DS29851.jpg)
