--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00109.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00109.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/daisies).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABMRea8W75eeSeCWNtr5TG5a/luontokuvat/kes%C3%A4/7/DS31620-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADA5jFqglZcK-U-N7Ub7Q2fa/luontokuvat/kes%C3%A4/7/DS31620.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA2Hhqcr0K3XQOWhfOeMXfoa/luontokuvat/kes%C3%A4/7/DS31619-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD1PaVZxMNFZjGSJ1ApkzNKa/luontokuvat/kes%C3%A4/7/DS31619.jpg)
