--- a/luontokuvat/kesa/_posts/2015-07-14-00069.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00069.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/starworts) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADWbQeH4Tu_wOlfCib_dBlba/luontokuvat/kes%C3%A4/7/DS23793-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACcbHLQn8laoSAPPcNoGuapa/luontokuvat/kes%C3%A4/7/DS23793.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAJTBX8BL_hFZDrDKMeyzMxa/luontokuvat/kes%C3%A4/7/DS23795-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC19QEl4DvlUkIac-JRlflYa/luontokuvat/kes%C3%A4/7/DS23795.jpg)
