--- a/luontokuvat/kesa/_posts/2015-07-14-00092.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00092.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/daisies) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAVRX2ajFUYKKpG1bStHecUa/luontokuvat/kes%C3%A4/9/DS34029-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAChWZyh3R3L_wxYiqkpTU1qa/luontokuvat/kes%C3%A4/9/DS34029.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAQCrmJSWO54KK6YHMalr6Ya/luontokuvat/kes%C3%A4/6/DS26134-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACKRIoJlWYeVpJZk0MfyqkPa/luontokuvat/kes%C3%A4/6/DS26134.jpg)
