--- a/luontokuvat/kesa/_posts/2015-07-14-00117.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00117.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/starworts) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABXq0Dm8Xiqkryxm4KmzbUla/luontokuvat/kes%C3%A4/9/DS44789-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAub-PtnmLBCGTM9xRBuJqua/luontokuvat/kes%C3%A4/9/DS44789.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACa5XdCkyv9dEBBDAmEpme9a/luontokuvat/kes%C3%A4/9/DS44799-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAS2-otNr4zp9Hf-wfFATK3a/luontokuvat/kes%C3%A4/9/DS44799.jpg)
