--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00035.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00035.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/clovers).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABA_ISfPvhDSsbjGAXl2TY-a/luontokuvat/kes%C3%A4/9/DS35218-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAMTmlKcpkxUJ3GnYpg-HEEa/luontokuvat/kes%C3%A4/9/DS35218.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABUJp5-XQG8d6Ko8LEpuviNa/luontokuvat/kes%C3%A4/9/DS35232-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAxCXsOeg_txQ9OhI42AtfYa/luontokuvat/kes%C3%A4/9/DS35232.jpg)
