--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00120.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00120.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/clovers).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACPWCcd9S5bD2th-kW_PUGWa/luontokuvat/kes%C3%A4/9/DS35814-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACZZtCuJXQEoPlzUmrNa1YDa/luontokuvat/kes%C3%A4/9/DS35814.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACTEKqlGOEju-cTev-IqBU-a/luontokuvat/kes%C3%A4/9/DS35805-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACL39Mm0MG8XfsFtPb111lTa/luontokuvat/kes%C3%A4/9/DS35805.jpg)
