--- a/luontokuvat/kesa/_posts/2015-07-14-00121.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00121.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/clovers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC4oJcl437pjvuoA-WnZo5ga/luontokuvat/kes%C3%A4/9/DS36328-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA-lmmF9o83H_-ZzpEqSbrna/luontokuvat/kes%C3%A4/9/DS36328.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACXB_OmY8Q7NxOsG5QG1yaja/luontokuvat/kes%C3%A4/9/DS36372-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABr3ewIAYq0oKT0NQlT8YSPa/luontokuvat/kes%C3%A4/9/DS36372.jpg)
