--- a/en/activation/_posts/2015-07-20-towels.md
+++ b/en/activation/_posts/2015-07-20-towels.md
@@ -81,9 +81,9 @@ Hide the folded towel under a rug.
 
 I rolled a slice of duck fillet inside a small towel before I rolled the towel onto a plastic hanger.
 
-You can hold the hanger or you can give th whole package to your dog.
+You can hold the hanger or you can give the whole package to your dog.
 
-When I hold the hanger it took Miki only one pull to get the towel off the hanger. And when I gave the whole package to Miki it took him about 1-2 minutes to get the towel off.
+When I held the hanger it took Miki only one pull to get the towel off the hanger. And when I gave the whole package to Miki it took him about 1-2 minutes to get the towel off.
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAoaZ6K0RL1_9uIUqo0FKD1a/aktivointi/minitehtavia/DS15602-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD4_2dA_Dd2OaAsqJOQq5v5a/aktivointi/minitehtavia/DS15602.jpg)
 
