--- a/luontokuvat/kesa/_posts/2015-07-14-00032.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00032.md
@@ -2,9 +2,11 @@
 layout: page
 image:
   feature:
-  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAApgS2xUvtaszB7GTxv_3zRa/luontokuvat/kes%C3%A4/8/DS32249-245px.jpg
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAONZbnEqXB8IAP1UD-kCUua/luontokuvat/kes%C3%A4/5/DS24185-245px%20%282%29.jpg
   thumb:
 ---
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADXNjlq1yRAzWiVllRtaNiPa/luontokuvat/kes%C3%A4/5/DS24185-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADnbfwS_J757fHoY5WkdCb_a/luontokuvat/kes%C3%A4/5/DS24185.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADShGYv3BIp4YtvUkP0Kwjea/luontokuvat/kes%C3%A4/8/DS32245-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAByYa3IglBKuMJwSYEIPlH7a/luontokuvat/kes%C3%A4/8/DS32245.jpg)
 
